
icon:plus[] OrientDB: The included OrientDB version has been updated to version 3.0.21

icon:plus[] GraphQL: You can now track ingoing node references. See the link:{{< relref "graphql.asciidoc" >}}#_loading_ingoing_references[example] in the documentation.

[[v0.36.1]]
== 0.36.1 (18.06.2019)

icon:plus[] Core: Support for Java 11 runtime has been added.

icon:plus[] Docker: The base image of the `gentics/mesh` and `gentics/mesh-demo` images have been updated to use the `adoptopenjdk/openjdk11:x86_64-alpine-jre-11.0.3_7` image.

icon:plus[] Docker: The included Elasticsearch version has been updated to version 6.8.0. Please note that support for embedded Elasticsearch will be dropped in the future.

icon:check[] REST: The deletion of microschemas which contain changes has been fixed. Previously a `NotImplementedException` was thrown for microschemas which contained changes. link:https://github.com/gentics/mesh/issues/589[#589]

icon:check[] REST: Error messages should now always be wrapped in JSON. Previously, internal server errors were returned as plain text.

icon:check[] GraphQL: Fixed a bug that caused the default language of a node to be fetched when loading a node list of a micronode.

icon:plus[] Core: Various internal structures and dependencies were re-organized and refactored.

icon:plus[] UI: The default set of enabled languages within the `mesh-ui-config.js` file has been updated to include more languages.

[[v0.36.0]]
== 0.36.0 (12.06.2019)

CAUTION: Java Rest Client

[quote]
____

The default field values for `NodeResponse` and `AbstractGenericRestResponse` has been updated.

The following values have been changed:

* `AbstractGenericRestResponse#permissions`
* `NodeResponse#tags`
* `NodeResponse#childrenInfo`
* `NodeResponse#container`
* `NodeResponse#fields`
* `NodeResponse#breadcrumb`

The `NodeResponse#isContainer` method has been deprecated and was replaced by `NodeResponse#getContainer`
